added a start button and timer

--- a/index.html
+++ b/index.html
@@ -19,6 +19,19 @@
         </div>
       </div>
     </header>
+    <main>
+      <div>
+        <section class="intro" id="intro">
+          <h1>
+            Welcome to the Coding Quiz
+          </h1>
+          <p>
+            In 60 seconds try to anwer the following questions.
+          </p>
+          <button class="button" id="start-button">Start Quiz</button>
+      </div>
+    </section>
+    </main>
 
     <script src="./script.js"></script>
   </body>
