--- a/index.html
+++ b/index.html
@@ -31,8 +31,25 @@
           <button class="button" id="start-button">Start Quiz</button>
       </div>
     </section>
+
+    <section class="questions" id="questions">
+      <div>
+        <div>
+          <h2 id="ask-question">Ask the question</h2>
+          <ul>
+            <li><button class="chocies" id="answer1"vaule="a">Answer1</button></li>
+            <li><button class="chocies" id="answer2"vaule="b">Answer2</button></li>
+            <li><button class="chocies" id="answer3"vaule="c">Answer3</button></li>
+            <li><button class="chocies" id="answer4"vaule="d">Answer4</button></li>
+          </ul>
+          <div>
+
+          <div id="check">
+              <p>Correct or Wrong</p>
+      </div>
+    </section>
     </main>
 
-    <script src="./script.js"></script>
+    <script src="./Assets/script.js"></script>
   </body>
 </html>
