timer disapears when it is clicked

--- a/index.html
+++ b/index.html
@@ -48,6 +48,18 @@
               <p>Correct or Wrong</p>
       </div>
     </section>
+
+    <section class="sumbit" id="submit">
+      <div>
+        <h2 id="finish">All Done!</h2>
+        <p id="final-score">Your final score is:</p>
+        <p>Enter intials
+          <input id="'inital">
+          <button class="button" id="submit-button"></button> 
+        </p>
+      </div>
+    </section>
+
     </main>
 
     <script src="./Assets/script.js"></script>
