created answer var

--- a/index.html
+++ b/index.html
@@ -58,6 +58,14 @@
           <button class="button" id="submit-button"></button> 
         </p>
       </div>
+    </section class="highscore" id="highscore">
+      <div>
+          <h2>High Scores</h2>
+          <div id="scores"><p>Your Record</p></div><br><br>
+    </div>
+
+    <section>
+
     </section>
 
     </main>
