--- a/index.html
+++ b/index.html
@@ -62,13 +62,17 @@
       <div>
           <h2>High Scores</h2>
           <div id="scores"><p>Your Record</p></div><br><br>
-    </div>
-
-    <section>
-
-    </section>
-
-    </main>
+          <div>
+            <button class= "button" id="back">Go Back</button>
+            <button class="button" id="clear">Clear Highscores</button>
+          </div>
+       </div>
+     </section>
+  </div>
+ </main>
+ <footer>
+  
+ </footer>
 
     <script src="./Assets/script.js"></script>
   </body>
