--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </section class="highscore" id="highscore">
       <div>
           <h2>High Scores</h2>
-          <div id="scores"><p>Your Record</p></div><br><br>
+          <div id="score-record"><p>Your Record</p></div><br><br>
           <div>
             <button class= "button" id="back">Go Back</button>
             <button class="button" id="clear">Clear Highscores</button>
@@ -71,7 +71,7 @@
   </div>
  </main>
  <footer>
-  
+
  </footer>
 
     <script src="./Assets/script.js"></script>
