--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
       <div>
         <h2 id="finish">All Done!</h2>
         <p id="final-score">Your final score is:</p>
-        <p>Enter intials
-          <input id="'inital">
+        <p>Enter initials
+          <input id="inital">
           <button class="button" id="submit-button"></button> 
         </p>
       </div>
-    </section class="highscore" id="highscore">
-      <div>
+    </section>
+      <div class="highscore" id="highscore">
           <h2>High Scores</h2>
           <div id="score-record"><p>Your Record</p></div><br><br>
           <div>
