--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
         <div>
           <h2 id="ask-question">Ask the question</h2>
           <ul>
-            <li><button class="chocies" id="answer1"vaule="a">Answer1</button></li>
-            <li><button class="chocies" id="answer2"vaule="b">Answer2</button></li>
-            <li><button class="chocies" id="answer3"vaule="c">Answer3</button></li>
-            <li><button class="chocies" id="answer4"vaule="d">Answer4</button></li>
+            <li><button class="chocies" id="answer1" value="a">Answer1</button></li>
+            <li><button class="chocies" id="answer2" value="b">Answer2</button></li>
+            <li><button class="chocies" id="answer3" value="c">Answer3</button></li>
+            <li><button class="chocies" id="answer4" value="d">Answer4</button></li>
           </ul>
           <div>
 
