--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
             Welcome to the Coding Quiz
           </h1>
           <p>
-            In 60 seconds try to anwer the following questions.
+            Once you click start, you will have 60 seconds to answer the 
+            following 4 questions. Good Luck!
           </p>
           <button class="button" id="start-button">Start Quiz</button>
       </div>
