add background and font styles

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="sylesheet" type="text/css" href="./Assets/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="./Assets/css/style.css" />
     <title>Quiz</title>
   </head>
 
@@ -50,7 +50,7 @@
       </div>
     </section>
 
-    <section class="sumbit" id="submit">
+    <section class="submit" id="submit">
       <div>
         <h2 id="finish">All Done!</h2>
         <p id="final-score">Your final score is:</p>
